--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "transformers>=4.40",
     "accelerate",
     "datasets",
+    "peft",
     "huggingface_hub",
     "safetensors",
     "faiss-cpu",
