--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ torchaudio
 transformers
 accelerate
 datasets
+peft
 opencv-python
 lerobot
 pytorch-lightning
@@ -15,4 +16,3 @@ tqdm
 numpy
 Pillow
 pyyaml
-
