--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,9 @@ Repository = "https://github.com/charbel/world-modality-vla"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.metadata]
+allow-direct-references = true
+
 [tool.hatch.build.targets.wheel]
 packages = ["world_modality", "coc_vla"]
 
